Fix: Collapse/expand button changes with screen size

--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -104,7 +104,7 @@
     border: 1.5px solid #0f0f0f;
     padding: 0.4rem;
     border-radius: 50%;
-    width: 100%;
+    width: 1.15rem;
     -webkit-user-drag: none;
     filter: invert(1);
 }
